# duckdb

./: CMakeLists.txt  CONTRIBUTING.md
benchmark/: benchmark_runner.cpp
benchmark/include/: benchmark.hpp
benchmark/micro/: CMakeLists.txt  azim.cpp
benchmark/micro/arithmetic/: multiplications.benchmark
cmake_modules/: SetupCxxFlags.cmake
examples/embedded-c++/: System.h  main.cpp
extension/parquet/: parquet_reader.cpp
extension/rdtsc/include/: cycleclock.h
scripts/: amalgamation.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt  cpu_feature.cpp  cpu_info.cpp  cycle_counter.cpp  progress_bar.cpp  tree_renderer.cpp
src/common/types/: chunk_collection.cpp  data_chunk.cpp  vector.cpp  vector_buffer.cpp
src/common/vector_operations/: boolean_operators.cpp  comparison_operators.cpp  gather.cpp  (+6 more)
src/execution/: aggregate_hashtable.cpp  expression_executor.cpp  expression_executor_state.cpp  join_hashtable.cpp  partitionable_hashtable.cpp  perfect_aggregate_hashtable.cpp  physical_operator.cpp  window_segment_tree.cpp
src/function/: CMakeLists.txt  function.cpp
src/function/scalar/operators/: CMakeLists.txt  add.cpp  arithmetic.cpp  bitwise.cpp  multiply.cpp  operators.cpp  plus.cpp  subtract.cpp
src/main/: appender.cpp  client_context.cpp  query_profiler.cpp
src/parallel/: executor.cpp  pipeline.cpp  thread_context.cpp
src/storage/: data_table.cpp  index.cpp  local_storage.cpp  numeric_segment.cpp  storage_manager.cpp  string_segment.cpp  uncompressed_segment.cpp  wal_replay.cpp  write_ahead_log.cpp
test/helpers/: test_helpers.cpp
(+129 files in other folders)
